--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-<body onload="openAmazonLink();">
+<body onload="openAmazonLink('https://www.amazon.in');">
 
 
 //https://amzn.to/3uzpnBi
