--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ function openAmazonIndiaLink(amazonInUrl) {
 }
 </script>
 </head>
-<body>
+<body onload="openAmazonIndiaLink('https://www.amazon.in/dp/B012345678?tag=yourtrackingid')">
 
-<button onclick="openAmazonIndiaLink('https://www.amazon.in/dp/B012345678?tag=yourtrackingid')">
-  Open in Amazon App
+<button>
+  Opening in Amazon App
 </button>
 
 </body>
