--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ function openAmazonIndiaLink(amazonInUrl) {
 }
 </script>
 </head>
-<body onload="openAmazonIndiaLink('https://www.amazon.in/dp/B012345678?tag=yourtrackingid')">
+<body onload="openAmazonIndiaLink('https://www.amazon.in/dp/B012345678?tag=mytrackingid')">
 
 <button>
   Opening in Amazon App
