--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ function openAmazonIndiaLink(amazonInUrl) {
 }
 </script>
 </head>
-<body onload="openAmazonIndiaLink('https://www.amazon.in/dp/B012345678?tag=mytrackingid')">
+<body onload="openAmazonIndiaLink('https://www.amazon.in?&linkCode=ll2&tag=shashanklink-21&linkId=50a68f260c7135fb2a20ebd2c7853aaf&language=en_IN&ref_=as_li_ss_tl')">
 
 <button>
   Opening in Amazon App
