--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 <html>
 <head>
 <title>Open Amazon Product in App</title>
+
+
+  <style>
+button {
+  display: flex;                   
+  justify-content: center;        
+  align-items: center;          
+  height: 100vh;                   
+  width: 100%;                     
+}
+
+button {
+  padding-top: 20px;              
+}
+</style>
 <script>
 function openAmazonIndiaLink(amazonInUrl) {
   const userAgent = navigator.userAgent || navigator.vendor || window.opera;
