--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ function openAmazonIndiaLink(amazonInUrl) {
 }
 </script>
 </head>
-<body onload="openAmazonIndiaLink('https://www.amazon.in?&linkCode=ll2&tag=shashanklink-21&linkId=50a68f260c7135fb2a20ebd2c7853aaf&language=en_IN&ref_=as_li_ss_tl')">
+<body onload="openAmazonIndiaLink('https://www.amazon.in?&linkCode=ll2&tag=shashanklink-21&linkId=50a68f260c7135fb2a20ebd2c7853aaf&language=en_IN&ref_=as_li_ss_tl&tag=shashanklink-21')">
 
 <button>
   Opening in Amazon App
